Chapter11/citizendocs-kustomize/base/citizendocs/templates/deployment-backend.yaml
---
# Source: citizendocs/templates/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citizendocs-backend
  labels:
    app: citizendocs-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: citizendocs-backend
  template:
    metadata:
      labels:
        app: citizendocs-backend
    spec:
      containers:
        - name: backend
          image: "quay.io/relessaw/citizendocs-backend:latest"
          ports:
            - containerPort: 8080
