Chapter11/citizendocs-kustomize/base/citizendocs/templates/route-frontend.yaml
---
# Source: citizendocs/templates/route-frontend.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: citizendocs-frontend
spec:
  host: frontend.citizendocs.local
  to:
    kind: Service
    name: citizendocs-frontend
  port:
    targetPort: 80
